--- a/.classpath
+++ b/.classpath
@@ -10,5 +10,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="lib" path="lib/antlr-4.0-complete.jar" sourcepath="lib/antlr-4.0-src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/TSLKParserGenerator"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
